# techkern

./: .health  README.md  package.json
sdk/node/: package.json
sdk/node/src/: index.ts
sdk/python/: pyproject.toml
sdk/python/techkern_sdk/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
spec/: RFC-0001-mcp-tool-schema.md  RFC-0002-clickhouse-projection-strategy.md
src/: index.ts  router.ts
src/clickhouse/: client.ts
src/eval/: quality-monitor.ts
src/tools/: query-solana-swaps.ts
