[package]
name = "techkern"
version = "0.4.0"
edition = "2021"
description = "Rust client for the techkern MCP server — live Solana context for AI agents"
license = "MIT"
keywords = ["mcp", "solana", "ai-agents", "techkern"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
